fix user menu/report map overlap issue. Fixes #156, fixes #138 (dupe)

--- a/fishpass/static/fishpass/css/report_fullscreen.css
+++ b/fishpass/static/fishpass/css/report_fullscreen.css
@@ -8,6 +8,6 @@
     position: fixed;
     right: 0;
     top: 8vh;
-    z-index: 100;
+    z-index: 1;
   }
 }
